# daan

./: .env  .gitignore  .prettierignore  CONTRIBUTION.md  MARKETPLACE_TEMPLATE.md  README.md  components.json  debug.css  index.html  package.json  pnpm-lock.yaml  prettier.config.mjs  sheafy.toml  tailwind.config.mjs  tsconfig.json  vite.config.ts  wrangler.jsonc  使用说明.md
.github/workflows/: publish.yml
assets/: hostApi.js
src/: App.tsx  SystemSettingsDialog.tsx  daan-ui-miniapp.css  host-api.js  hostApi.js  index.tsx  miniapp.css  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  lib.rs  mcp.rs
src-tauri/src/mcp/: cmd.rs  control.rs  mod.rs
src/components/: ActiveChatSettings.tsx  CharacterEditor.tsx  CharacterMarketplaceDialog.tsx  CharacterSection.tsx  ChatHeader.tsx  ChatHistory.tsx  ChatInterface.tsx  ChatMessageItem.tsx  ChatSettingsModal.tsx  ConversationActionsMenu.tsx  ConversationItem.tsx  ConversationList.tsx  ConversationSearch.tsx  ConversationSearchDialog.tsx  Demo.tsx  FastImport.tsx  IconPicker.tsx  LeftSidebar.tsx  McpToolsPopover.tsx  MessageInput.tsx  MessageToolbar.tsx  MiniappMarketplaceDialog.tsx  MiniappSearchDialog.tsx  MiniappSection.tsx  MiniappWindow.tsx  MiniappWindowManager.tsx  ModelSelect.tsx  RightSidebar.tsx  SidebarActions.tsx  SidebarFooter.tsx  SidebarHeader.tsx
src/hooks/: debug.js  use-media-query.ts  use-stream-throttle.ts
src/lib/: MarketplaceService.ts  MiniappTransport.ts  download.ts  env.ts  file.ts  hook.ts  messageConverter.ts  (+5 more)
worker/: index.ts
(+101 files in other folders)
