[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.81.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
futures = "0.3" # For stream processing
log = "0.4"
once_cell = "1" # Optional: for static Mutex
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1", features = ["full"] } # For async IO
uuid = { version = "1", features = ["v4"] } # For generating unique IDs
